--- a/04-forms/package.json
+++ b/04-forms/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.12.2",
+    "@mantine/form": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
