--- a/04-todo-app/package.json
+++ b/04-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-forms",
+  "name": "react-mantine-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,6 +26,9 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.4.45",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "vite": "^5.4.1"
   }
 }
