Add: submodule 06-shoping-cart

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "05-api-fetch"]
 	path = 05-api-fetch
 	url = git@github.com:Awerito/05-api-fetch.git
+[submodule "06-shoping-cart"]
+	path = 06-shoping-cart
+	url = git@github.com:Awerito/06-shoping-cart.git
