Add: 12-todo-mobile example app

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "11-react-native-expo"]
 	path = 11-react-native-expo
 	url = git@github.com:Awerito/11-react-native-expo.git
+[submodule "12-todo-mobile"]
+	path = 12-todo-mobile
+	url = git@github.com:Awerito/12-todo-mobile.git
